<resources>
    <string name="app_name">ESPC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_log_out">Log Out</string>
    <string name="property_activity">PROPERTIES</string>
    <string name="log_in_activity">Log in</string>
    <string name="title_activity_property_details">PropertyDetailsActivity</string>
    <string name="prompt_add_property_address">Address</string>
    <string name="prompt_add_property_price">Price</string>
    <string name="add_new_property_dialog_tag">add_new_property_dialog_tag</string>
    <string name="property_popup_delete">Delete</string>
    <string name="property_popup_update">Update</string>
    <string name="conf_delete_property_dialog_tag">confirm_delete_property_dialog_tag</string>
    <string name="conf_delete_property_dialog_title">Delete Property</string>
    <string name="conf_delete_property_dialog_message">Are you sure that you want to delete this property?</string>
    <string name="toast_error_message_delete_property">Delete failed. Please try again.</string>
    <string name="toast_error_message_update_property">Error! Property details not updated.</string>
    <string name="update_property_dialog_title">Update Property details</string>
    <string name="update_property_dialog_message">Set the new Details of this property</string>
    <string name="update_property_dialog_tag">update_property_dialog_tag</string>
    <string name="property_popup_rating">Show ratings</string>
    <string name="title_activity_ratings">RatingsActivity</string>
    <string name="error_add_new_property_toast_message">Error! Please try again.</string>
    <string name="action_show_my_prop">Show Only My Prop</string>
    <string name="error_show_toast_cant_delete_prop">Not authorized to delete this property!</string>
    <string name="error_show_toast_cant_update_prop">Not authorized to update this property!</string>
    <string name="action_seatch">Search</string>
    <string name="toast_error_updating_room_details">Failed updating room details</string>
    <string name="action_reset_database">Reset db</string>
</resources>
