<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UI.MainActivity">


    <item
        android:id="@+id/action_show_my_properties"
        android:orderInCategory="100"
        android:title="@string/action_show_my_prop"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="300"
        android:title="@string/action_log_out"
        app:showAsAction="never" />

    <item
        android:title="@string/action_seatch"
        android:id="@+id/action_search"
        android:orderInCategory="400"
        android:icon="@drawable/search_icon"
        app:showAsAction="always" />

    <item
        android:title="@string/action_reset_database"
        android:id="@+id/action_reset_db"
        android:orderInCategory="500"
        android:icon="@drawable/search_icon"
        app:showAsAction="never" />
</menu>
